--- a/Apps/login/templates/base.html
+++ b/Apps/login/templates/base.html
@@ -143,7 +143,7 @@ https://www.youtube.com/c/CarlosAlfaro007
 						
 						<ul class="full-width menu-principal sub-menu-options">
 							<li class="full-width">
-								<a href="{%url 'ventas:crearVenta'%}" class="full-width">
+								<a href="{%url 'ventas:cart'%}" class="full-width">
 									<div class="navLateral-body-cl">
 										<i class="zmdi zmdi-washing-machine"></i>
 									</div>
@@ -153,7 +153,7 @@ https://www.youtube.com/c/CarlosAlfaro007
 								</a>
 							</li>
 							<li class="full-width">
-								<a href="{%url 'ventas:listarVentas'%}" class="full-width">
+								<a href="{%url 'ventas:cart'%}" class="full-width">
 									<div class="navLateral-body-cl">
 										<i class="zmdi zmdi-washing-machine"></i>
 									</div>
@@ -163,7 +163,7 @@ https://www.youtube.com/c/CarlosAlfaro007
 								</a>
 							</li>
 							<li class="full-width">
-								<a href="{%url 'ventas:crearCotizacion'%}" class="full-width">
+								<a href="{%url 'ventas:cart'%}" class="full-width">
 									<div class="navLateral-body-cl">
 										<i class="zmdi zmdi-washing-machine"></i>
 									</div>
@@ -205,7 +205,7 @@ https://www.youtube.com/c/CarlosAlfaro007
 							<div class="mdl-tooltip" >Cerrar Sesion</div>
 						</a>
 						</li>
-						<li class="text-condensedLight noLink" ><small>{{user.username}}</small></li>
+						<li class="text-condensedLight noLink" ><small>Usuario</small></li>
 						<li class="noLink">
 							<figure>
 								<img src="{% static 'assets/img/avatar-male.png'%}" alt="Avatar" class="img-responsive">
