--- a/Apps/ventas/templates/ventas.html
+++ b/Apps/ventas/templates/ventas.html
@@ -20,7 +20,7 @@
 					</div>
 					<div class="full-width panel-content">
 						<p class="text-center">
-							<a href="{% url 'ventas:crearVenta' %}">
+							<a href="{% url 'ventas:cart' %}">
 								<button
 									class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary"
 									id="btn-addProvider">
@@ -43,7 +43,7 @@
 
 									<div class="mdl-textfield__input">
 										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
-											Cliente {{form.cliente}}
+											Empleado {{form.empleado}}
 										</div>
 									</div>
 
@@ -60,13 +60,6 @@
 											
 										</div>
 									</div>
-
-									<div class="mdl-textfield__input">
-										<div class=" mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
-											Empleado {{form.empleado}}
-										</div>
-									</div>
-
 								</div>
 
 								<p class="text-center">
